2011-01-05  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt][V8] Fix the build after recent changes.

        * pcre/pcre.pri: Correct the path after Source was introduced.

2011-01-04  Steve Falkenburg  <sfalken@apple.com>

        Build fix. Update path to FindSafari after source code reorganization.

        * JavaScriptCore.vcproj/JavaScriptCore.sln:

2011-01-04  Daniel Bates  <dbates@rim.com>

        Fix the Android build after changeset 74975 <http://trac.webkit.org/changeset/74975>
        (https://bugs.webkit.org/show_bug.cgi?id=51855).

        * wtf/ThreadingPthreads.cpp: Add include of PassOwnPtr.h.
        (WTF::runThreadWithRegistration): Use -> instead of . to dereference pointer.

2011-01-04  Martin Robinson  <mrobinson@igalia.com>

        Try to fix the EFL build.

        * wtf/CMakeLists.txt: Remove PlatformRefPtr from the CMake source list.

2011-01-04  James Robinson  <jamesr@chromium.org>

        Reviewed by Darin Adler.

        StackBounds initialization in WTFThreadData should be guarded by #if USE(JSC)
        https://bugs.webkit.org/show_bug.cgi?id=51881

        The StackBounds class is only used by JavaScriptCore.

        * wtf/WTFThreadData.cpp:
        (WTF::WTFThreadData::WTFThreadData):
        * wtf/WTFThreadData.h:
        (WTF::WTFThreadData::resetCurrentIdentifierTable):

2011-01-03  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Darin Adler.

        Remove the last non-GObject usage of PlatformRefPtr and move the code to GRefPtr
        https://bugs.webkit.org/show_bug.cgi?id=51846

        * GNUmakefile.am: Remove PlatformRefPtr.h from the sources list.
        * JavaScriptCore.vcproj/WTF/WTF.vcproj: Ditto.
        * jit/ExecutableAllocator.h: Change references to PlatformRefPtr to RefPtr.
        (JSC::ExecutableAllocator::cacheFlush): Ditto.
        * wtf/PlatformRefPtr.h: Removed.
        * wtf/RandomNumber.cpp: Change references to PlatformRefPtr to RefPtr.